# kelompok_12_RTC

./: README.md
svm_knn_airquality-main/: Cargo.toml  README.md  airquality.csv
svm_knn_airquality-main/backup/: data.txt  main.txt  main2.txt  main3.txt  plot.txt  svm.txt
svm_knn_airquality-main/src/: knn.rs  lib.rs  main.rs  utils.rs
trigonometry_qt-main/: Cargo.toml  README.md
trigonometry_qt-main/qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
trigonometry_qt-main/src/: lib.rs  main.rs  table.rs  taylor.rs
