[package]
name = "svm_knn_airquality"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
linfa = { version = "0.7.1", features = ["serde"] }
linfa-svm = "0.7.2"
linfa-kernel = "0.7.1"
linfa-logistic = { version = "0.7.1", features = ["serde"] }
ndarray = "0.15.6"
rand = "0.8.5"
plotters = "0.3.7"
libc = "0.2"
bincode = "1.3"
serde_json = "1.0"  # Tambahkan ini untuk serialisasi JSON

[lib]
name = "air_quality_analyzer"
crate-type = ["cdylib"]